--- a/vercel.json
+++ b/vercel.json
@@ -8,19 +8,25 @@
   ],
   "routes": [
     {
-      "src": "/api/socket/(.*)",
-      "dest": "/api/socket/$1",
+      "src": "/api/socket",
+      "dest": "/api/socket",
       "headers": {
         "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
+        "Access-Control-Allow-Methods": "GET, POST, OPTIONS",
         "Access-Control-Allow-Headers": "Content-Type, Authorization"
-      },
-      "continue": true
+      }
     },
     {
-      "src": "/api/socket/io/(.*)",
-      "dest": "/api/socket/io/$1",
-      "continue": true
+      "src": "/api/socket/io",
+      "dest": "/api/socket/io",
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Credentials": "true"
+      }
+    },
+    {
+      "src": "/socket.io/(.*)",
+      "dest": "/api/socket/io/$1"
     }
   ]
 } 
