my water bottle empty :(

--- a/vercel.json
+++ b/vercel.json
@@ -6,27 +6,30 @@
       "use": "@vercel/next"
     }
   ],
+  "headers": [
+    {
+      "source": "/api/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Credentials", "value": "true" },
+        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
+        { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version" }
+      ]
+    }
+  ],
   "routes": [
     {
       "src": "/api/socket",
       "dest": "/api/socket",
-      "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Methods": "GET, POST, OPTIONS",
-        "Access-Control-Allow-Headers": "Content-Type, Authorization"
-      }
+      "methods": ["GET", "POST", "OPTIONS"]
     },
     {
       "src": "/api/socket/io",
-      "dest": "/api/socket/io",
-      "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Credentials": "true"
-      }
+      "dest": "/api/socket/io"
     },
     {
       "src": "/socket.io/(.*)",
-      "dest": "/api/socket/io/$1"
+      "dest": "/api/socket/io"
     }
   ]
 } 
